--- a/css/template.css
+++ b/css/template.css
@@ -104,7 +104,11 @@ input, textarea {
 }
 input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus {
     box-shadow:none;
-    -webkit-text-fill-color: transparent;
+    -webkit-text-fill-color: #333 !important;
+    -webkit-box-shadow: 0 0 0 1000px transparent  inset !important;
+    background-color:transparent;
+    background-image: none;
+    transition: background-color 50000s ease-in-out 0s;
 }
 caption, th, td {
     text-align: left;
