修复了选择设备弹出框中的页面逻辑问题

--- a/css/evaluationModel.css
+++ b/css/evaluationModel.css
@@ -132,7 +132,7 @@
 .model .modelCon .table .tabCon .conList ul li em{
     overflow: hidden;
     display: block;
-    background: url("../images/template/‭icon-open.png") no-repeat;
+    background: url("../images/template/icon-open.png") no-repeat;
     background-size: 100% 100%;
     width: 16px;
     height: 16px;
